@@ -618,6 +618,7 @@ $[c_1,\dots,c_k]$ such that $\chi(g_j) = e(n_j/d_j)$.
 \subsec{Dirichlet Characters}
 \li{initialize $G = (\ZZ/q\ZZ)^*$}{G = idealstar$(,q)$}
 \li{is $\chi$ odd?}{zncharisodd$(G,\chi)$}
+\li{real $\chi \to $ Kronecker symbol $(D/.)$}{znchartokronecker$(G,\chi)$}
 \li{induce $\chi\in \hat{G}$ to $\ZZ/N\ZZ$}{zncharinduce$(G,\var{chi},N)$}
 
 \subsec{Conrey labelling}
