@@ -38,4 +38,19 @@
 [1, 9]~
 [1, 9]~
 [1, 9]~
-Total time spent: 4
+* 100
+1: [100, 1]
+49: [20, 5]
+51: [-100, -4]
+99: [-20, -20]
+* 8
+1: [4, 1]
+3: [-8, -8]
+5: [8, 8]
+7: [-4, -4]
+* 5
+1: [25, 1]
+4: [5, 5]
+* 1
+1: [1, 1]
+Total time spent: 2
