@@ -31,3 +31,21 @@ chardiv(G,A,B)
 chardiv(G,a,B)
 chardiv(G,a,n)
 chardiv(G,m,B)
+
+test(G)=
+{
+  my(N = G.mod,D);
+  print("* ",N);
+  for(i=1,N,
+    if(gcd(N,i)!=1,next);
+    D = znchartokronecker(G,i);if (!D,next);
+    D0 = znchartokronecker(G,i,1);
+    print(i,": ",[D,D0]); chi = znconreylog(G,i);
+    if (vector(N,j,kronecker(D,j)) != vector(N,j,chareval(G,chi,j,[-1,2])),
+      error(D))
+  );
+}
+test(G)
+test(znstar(8,1))
+test(znstar(5,1))
+test(znstar(1,1))
