@@ -44,6 +44,7 @@ Done for version 2.8.1 (released ??/??/2016):
    23- [libpari] nfmaxord_to_nf, nfinit_basic, nfinit_complete,
        idealprimedec_kummer, nf_deg1_prime
    24- [libpari] ZNstar, znstar0, znlog0
+   25- GP function znchartokronecker
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
